sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:18: error: illegal start of simple pattern
if (a>b) then {echange a,b}
^AlgBubbleSort1:19: error: '=' expected but '}' found.
}
^